--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ishulev/polygraphia-elevator#readme",
   "devDependencies": {
+    "browserify": "^14.5.0",
     "tape": "^4.8.0"
   }
 }
